syntax = "proto3";
package kira.tokens;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/KiraCore/sekai/x/tokens/types";

message ProposalUpsertTokenInfo {
  option (cosmos_proto.implements_interface) = "Content";
  option (gogoproto.equal) = true;

  string denom = 1; // denomination target
  string rate = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ]; // Exchange rate in terms of KEX token
  bool fee_enabled = 3; // Properties defining if it is enabled or disabled as fee payment method
  string stake_cap = 4 [
    (gogoproto.moretags) = "yaml:\"stake_cap\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ]; // rewards cap, sum should be lower than 100%
  string stake_min = 5 [
    (gogoproto.moretags) = "yaml:\"stake_min\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  bool stake_enabled = 6;
  bool inactive = 7;
  string symbol = 8;    // Ticker (eg. ATOM, KEX, BTC)
  string name = 9;      // Token Name (e.g. Cosmos, Kira, Bitcoin)
  string icon = 10;     // Graphical Symbol (url link to graphics)
  uint32 decimals = 11; // Integer number of max decimals
}
