syntax = "proto3";
package kira.tokens;

import "gogoproto/gogo.proto";

option go_package = "github.com/KiraCore/sekai/x/tokens/types";

message TokenInfo {
  string denom = 1; // denomination target
  string fee_rate = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];                     // Exchange rate in terms of KEX token
  bool fee_payments = 3; // Properties defining if it is enabled or disabled as fee payment method
  string stake_cap = 4 [
    (gogoproto.moretags) = "yaml:\"stake_cap\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ]; // rewards cap, sum should be lower than 100%
  string stake_min = 5 [
    (gogoproto.moretags) = "yaml:\"stake_min\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  bool stake_token = 6;
  bool invalidated = 7; // flag that the token is invalidated or not
  string symbol = 8;    // Ticker (eg. ATOM, KEX, BTC)
  string name = 9;      // Token Name (e.g. Cosmos, Kira, Bitcoin)
  string icon = 10;     // Graphical Symbol (url link to graphics)
  uint32 decimals = 11; // Integer number of max decimals
}
